syntax = "proto3";

package max.dillon;

enum Topology {
    SQUARE = 0;
    CYLINDER = 1;
    TORUS = 2;
}

enum Symmetry {
    ROTATE = 0;
    REFLECT = 1;
    NONE = 2;
}

enum MoveSource {
    PIECES_ON_BOARD = 0;
    ENDS = 1;
}

enum Outcome {
    DISALLOWED = 0;
    ALLOWED = 1;
    CAPTURE = 2;
    SWAP = 3;
    STAY = 4;
    DEPLOY = 5;
    IMPRESS = 6;
}

message MoveOptions {
    Outcome none = 1;
    Outcome own = 2;
    Outcome opponent = 3;
}

message Move {
    repeated string template = 1;
    MoveOptions land = 4;
    MoveOptions jump = 5;
    string exchange = 6;
    uint32 priority = 7;
    bool continue = 8;
}

message Piece {
    string name = 1;
    uint32 count = 2;
    uint32 min = 3;
    repeated string placement = 4;
    repeated Move move = 5;
}

message GameSpec {
    string name = 1;
    uint32 board_size = 2;
    Topology board_topology = 3;
    Symmetry board_symmetry = 4;
    MoveSource move_source = 5;
    repeated Piece piece = 6;
}
